--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="vendors/fontawesome-pro-5/css/all.css">
+    <link rel="stylesheet" href="vendors/fontawesome-pro-5/css/all-2.css">
+    <link rel="stylesheet" href="vendors/fontawesome-pro-5/css/all-1.css">
     <link rel="stylesheet" href="vendors/bootstrap-select/css/bootstrap-select.min.css">
     <link rel="stylesheet" href="vendors/slick/slick.min.css">
     <link rel="stylesheet" href="vendors/magnific-popup/magnific-popup.min.css">
