--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
                                             class="text-white fs-md-60 fs-48">Plots in XSIS Infra <br> Propex City</a></h2>
                                     <p class="text-white fs-22 font-weight-500">Sector-70, Faridabad</p>
                                     <p class="text-white fs-32 font-weight-600 lh-16">80-168 SQYD</p>
+                                    <p class="text-white fs-54 font-weight-900 lh-16">Price starts from 26.68 Lacs*</p>
                                 </div>
                             </div>
                         </div>
@@ -187,6 +188,7 @@
                                             class="text-white fs-md-60 fs-48">Plots in XSIS Infra <br> Propex City</a></h2>
                                             <p class="text-white fs-22 font-weight-500">Sector-70, Faridabad</p>
                                             <p class="text-white fs-32 font-weight-600 lh-16">80-168 SQYD</p>
+                                            <p class="text-white fs-54 font-weight-900 lh-16">Price starts from 26.68 Lacs*</p>
                                 </div>
                             </div>
                         </div>
@@ -210,6 +212,7 @@
                                             class="text-white fs-md-60 fs-48">Plots in XSIS Infra <br> Propex City</a></h2>
                                             <p class="text-white fs-22 font-weight-500">Sector-70, Faridabad</p>
                                             <p class="text-white fs-32 font-weight-600 lh-16">80-168 SQYD</p>
+                                            <p class="text-white fs-54 font-weight-900 lh-16">Price starts from 26.68 Lacs*</p>
                                 </div>
                             </div>
                         </div>
@@ -539,7 +542,7 @@
                 </div>
             </div>
         </section>
-        <section class="bg-gray-02 pt-9 mt-1 pb-lg-8">
+        <!--<section class="bg-gray-02 pt-9 mt-1 pb-lg-8">
             <div class="container">
                 <h2 class="text-heading text-center">Services Offered</h2>
                 <span class="heading-divider mx-auto"></span>
@@ -607,7 +610,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section>-->
         <section id="downloads" class="pb-8">
             <div class="container container-xxl">
                 <h2 class="text-dark text-center">Downloads</h2>
